--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
   },
   "dependencies": {
     "expo": "^35.0.0",
+    "expo-barcode-scanner": "^7.0.0",
     "expo-camera": "^7.0.0",
-    "react": "16.8.3",
+    "expo-face-detector": "^7.0.0",
+    "expo-media-library": "^7.0.0",
+    "react": "^16.8.3",
     "react-dom": "16.8.3",
-    "react-native": "0.59.10",
+    "react-native": "^0.59.10",
     "react-native-gesture-handler": "~1.3.0",
+    "react-native-is-iphonex": "^1.0.1",
     "react-native-reanimated": "~1.2.0",
     "react-native-screens": "1.0.0-alpha.23",
     "react-native-unimodules": "~0.5.4",
