--- a/app.json
+++ b/app.json
@@ -1,19 +1,31 @@
 {
-  "name": "attracker",
-  "displayName": "for hackathon",
   "expo": {
-    "name": "attracker",
-    "slug": "attracker",
-    "privacy": "unlisted",
+    "name": "atttracker",
+    "slug": "atttracker",
+    "privacy": "public",
     "sdkVersion": "35.0.0",
-    "version": "1.0.0",
-    "entryPoint": "node_modules/expo/AppEntry.js",
     "platforms": [
       "ios",
       "android",
       "web"
     ],
-    "description": "",
+    "version": "1.0.0",
+    "orientation": "portrait",
+    "icon": "./assets/icon.png",
+    "splash": {
+      "image": "./assets/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
+    },
+    "updates": {
+      "fallbackToCacheTimeout": 0
+    },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
+    "ios": {
+      "supportsTablet": true
+    },
     "githubUrl": "https://github.com/QinMing/attn-tracker"
   }
 }
