--- a/package.json
+++ b/package.json
@@ -1,38 +1,33 @@
 {
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "postinstall": "jetify",
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
     "web": "expo start --web",
-    "start": "react-native start",
-    "test": "jest"
+    "eject": "expo eject"
   },
   "dependencies": {
     "expo": "^35.0.0",
+    "react": "16.8.3",
     "expo-barcode-scanner": "^7.0.0",
     "expo-camera": "^7.0.0",
     "expo-face-detector": "^7.0.0",
     "expo-media-library": "^7.0.0",
-    "react": "^16.8.3",
     "react-dom": "16.8.3",
-    "react-native": "^0.59.10",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react-native-web": "^0.11.7",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-is-iphonex": "^1.0.1",
     "react-native-reanimated": "~1.2.0",
     "react-native-screens": "1.0.0-alpha.23",
-    "react-native-unimodules": "~0.5.4",
-    "react-native-web": "^0.11.7"
+    "react-native-unimodules": "~0.5.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.0",
-    "babel-jest": "24.9.0",
-    "jest": "24.9.0",
-    "jetifier": "^1.6.4",
-    "metro-react-native-babel-preset": "0.56.0",
-    "react-test-renderer": "16.9.0"
-  },
-  "jest": {
-    "preset": "react-native"
+    "@types/react": "^16.8.23",
+    "@types/react-native": "^0.57.65",
+    "babel-preset-expo": "^7.0.0",
+    "typescript": "^3.4.5"
   },
   "private": true
 }
