--- a/app.json
+++ b/app.json
@@ -26,6 +26,7 @@
     "ios": {
       "supportsTablet": true
     },
-    "githubUrl": "https://github.com/QinMing/attn-tracker"
+    "githubUrl": "https://github.com/QinMing/attn-tracker",
+    "description": ""
   }
 }
